syntax = "proto3";

option go_package = "./proto";

message Block {
    int64 number = 1;
}

message CreateBlockRequest {
    Block block = 1;
}

message CreateBlockResponse {
    uint64 code = 1;
}

message ReadBlockRequest {
    int64 number = 1;
}

message ReadBlockResponse {
    Block block = 1;
}

service BlockService {
    rpc CreateBlock(CreateBlockRequest) returns (CreateBlockResponse) {}
    rpc GetBlock(ReadBlockRequest) returns (ReadBlockResponse) {}
}